Drew - Fixes vertical alignment

--- a/style.css
+++ b/style.css
@@ -211,6 +211,34 @@
    * Drew
    */
 
+	.dHeader {
+		display:table;
+		width:100%;
+		height:15%;
+	}
+
+	#drew h1 {
+		display:table-cell;
+		vertical-align: middle;
+		text-align:center;
+	}
+	.dContent {
+		width: 100%;
+		height:75%;
+	}
+	
+	.dFooter {
+		display:table;
+		width:100%;
+		height:10%;
+	}
+	
+	.source {
+		display:table-cell;
+		text-align:center;
+		vertical-align:middle;
+	}
+
    #drew {
    		font-family: Avenir, Helvetica, sans-serif;
    		overflow:hidden;
@@ -239,24 +267,24 @@
    		width:50%;
    		margin:40px auto;
    	}
-
-   	#futureImg {
+   	
+   	#carStackContent {
    		display:block;
-   	   	width:55%;
-   		margin:auto;
-   		border:1px solid black;
-   	}
+   		background:url(images/car_stack.png) no-repeat center center;
+   		background-size: 94% auto;
+   	}	
 
-   	#carStackImg {
+	#intersectContent {
    		display:block;
-   	   	width:90%;
-   	   	margin:auto;
+   		background:url(images/speeding_cartoon.jpeg) no-repeat center center;
+   		background-size: 90% auto;
    	}
-
+   	
    .tbl {
    		display:block;
-   		width:80%;
-   		margin:20px auto;
+   		width:75%;
+   		margin:auto;
+   		height:100%;
    }
 
    .tblr {
@@ -302,9 +330,19 @@
    		list-style:none;
    	}
 
-  	#readyVid {
-  		display:block;
-  		margin:60px auto 40px auto;
+	#vidContent {
+		display:table;
+	}
+	
+	#googleVidWrapper {
+		display:table-cell;
+		vertical-align: middle;
+		text-align:center;
+		width:100%;
+		height:100%;
+	}
+	
+  	#googleVid {
   		width:680px;
   		height:382px;
   	}
@@ -504,11 +542,6 @@
 		opacity:0.75;
 	}
 
-	.source {
-		display:block;
-		width:100%;
-		text-align: center;
-	}
 	
 	.pad {
 		width:100%;
